# DCFG

./: PDCFGviaPT_OMPT.md  README.md  StaticAnalysis.md  branch-predictor.md  calltrace.cpp  dcfg-driver.md  edgcnt.out  flowgraph.py  hello.main.sym  looppoint.md  pinplay-driver.md
dyninst_CFG/: CFG.cpp  CFG.dot  CMakeLists.txt  Makefile.pure  README.md  hello.dot  hello.main.dot  mem_count.cpp  setenv.sh
examples/: Makefile  axpy.c  matmul.c  matvec.c
pin_doc/: dcfg-driver.md  loop-tracker.md  pin.md  pinplay-driver.md
pin_examples/: README.md  callgraph.py  calltrace.out  edgcnt.cpp  hello.c  hello.s  hello.sym  main.graphml  makefile.rules  pinatrace.cpp  pinatrace.out
simple_loop_dependency-pinplay/: .cproject  .gdb.cmd.hgpatil  .project  README  compact_log.out  controlD.out  forward_branch_slice_file_0.sum  forward_branch_slice_file_1.sum  forward_branch_slice_file_2.sum  forward_branch_slice_file_3.sum  forward_slice_file_0.dep  forward_slice_file_0.sum  forward_slice_file_1.dep  forward_slice_file_1.sum  forward_slice_file_2.dep  forward_slice_file_2.sum  forward_slice_file_3.dep  forward_slice_file_3.sum  get-iteration-stats.sh  limited_preprocess.out  makefile  process-region.sh  process-whole.sh  record-whole.sh  region.dcfg.dot  region.stat-file.csv  simple_loop  simple_loop.c  slice-region.sh  slicetime_1.tt  stat_log.out  stat_slice.out  whole.dcfg.dot  whole.stat-file.csv
simple_loop_dependency-pinplay/region.pinball/: log.relog.txt  log_0.0.reg  log_0.0.result  log_0.0.result_play  log_0.0.sel  log_0.address  log_0.dcfg.json.bz2  log_0.procinfo.xml  log_0.replay.txt  log_0.text
simple_loop_dependency-pinplay/whole.pinball/: log.log.txt  log_0.0.reg.bz2  log_0.0.result  log_0.0.sel.bz2  (+6 more)
(+2699 files in other folders)
